--- a/app/src/main/res/layout/activity_local_music.xml
+++ b/app/src/main/res/layout/activity_local_music.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_localmusic"
@@ -19,4 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
-</LinearLayout>
+
+    <include layout="@layout/music_playbar"/>
+</androidx.drawerlayout.widget.DrawerLayout>
