--- a/app/src/main/res/layout/localmusic_single_item.xml
+++ b/app/src/main/res/layout/localmusic_single_item.xml
@@ -1,49 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/single_list_height"
     android:orientation="horizontal">
 
-    <ImageView
-        android:visibility="invisible"
-        android:id="@+id/list_item_voice"
-        android:scaleType="center"
-        android:src="@drawable/icon_bar_voice"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <LinearLayout
+        android:layout_width="@dimen/single_list_left_width"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/single_list_head_icon"
+            android:visibility="gone"
+            android:layout_width="@dimen/single_list_height"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:focusable="false"
+                android:layout_centerInParent="true"
+                android:id="@+id/list_item_voice"
+                android:scaleType="fitXY"
+                android:src="@drawable/icon_bar_voice"
+                android:layout_width="@dimen/single_list_pic_size"
+                android:layout_height="@dimen/single_list_pic_size"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_marginStart="@dimen/single_list_icon_size"
+            android:layout_width="@dimen/singe_list_mid_width"
+            android:layout_height="match_parent">
+            <TextView
+                android:focusable="false"
+                android:id="@+id/list_item_song"
+                android:ellipsize="end"
+                android:maxLines="@integer/one"
+                style="@style/PlayBarSongTextStyle"
+                android:layout_width="@dimen/single_list_song_width"
+                android:layout_height="@dimen/single_list_song_height"
+                android:text="@string/test_data" />
+
+            <ImageView
+                android:focusable="false"
+                android:layout_marginTop="@dimen/single_list_icon_top"
+                android:id="@+id/list_item_check"
+                android:layout_width="@dimen/single_list_icon_size"
+                android:layout_height="@dimen/single_list_icon_size"/>
+
+            <TextView
+                android:focusable="false"
+                android:id="@+id/list_item_singer"
+                android:ellipsize="end"
+                android:maxLines="@integer/one"
+                style="@style/PlayBarSingerTextStyle"
+                android:layout_marginStart="@dimen/single_list_singer_start"
+                android:layout_width="@dimen/single_list_singer_width"
+                android:layout_height="@dimen/single_list_singer_height"
+                android:layout_marginTop="@dimen/single_list_icon_top"
+                android:text="@string/test_data" />
+        </RelativeLayout>
+    </LinearLayout>
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/list_item_song"
-            android:ellipsize="end"
-            android:maxLines="@integer/one"
-            style="@style/PlayBarSongTextStyle"
-            android:layout_width="@dimen/list_text_width"
-            android:layout_height="@dimen/playbar_text_big_height"
-            android:text="@string/test_data" />
 
         <ImageView
-            android:id="@+id/list_item_check"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:focusable="false"
+            android:layout_centerInParent="true"
+            android:id="@+id/list_item_option"
+            android:scaleType="fitXY"
+            android:src="@drawable/toolbar_more"
+            android:layout_width="@dimen/single_list_option_size"
+            android:layout_height="@dimen/single_list_option_size"/>
 
-        <TextView
-            android:id="@+id/list_item_singer"
-            android:ellipsize="end"
-            android:maxLines="@integer/one"
-            style="@style/PlayBarSingerTextStyle"
-            android:layout_width="@dimen/list_text_width"
-            android:layout_height="@dimen/playbar_text_small_height"
-            android:layout_marginTop="@dimen/playbar_text_margin_top"
-            android:text="@string/test_data" />
     </RelativeLayout>
-
-    <ImageView
-        android:id="@+id/list_item_option"
-        android:scaleType="fitXY"
-        android:src="@drawable/toolbar_more"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 </LinearLayout>
