--- a/app/src/main/res/layout/music_playbar.xml
+++ b/app/src/main/res/layout/music_playbar.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="@dimen/playbar_margin_top"
+    android:background="@color/gray"
     android:orientation="horizontal">
 
     <RelativeLayout
