--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -79,4 +79,37 @@
     <dimen name="music_detail_progress_seekbar_width">310sp</dimen>
     <dimen name="music_detail_seekbar_height">2sp</dimen>
     <dimen name="music_detail_seekbar_progress_height">2sp</dimen>
+    <dimen name="music_detail_lyric_time_height">10sp</dimen>
+    <dimen name="discover_songlist_recommend_start">10sp</dimen>
+    <dimen name="discover_songlist_recommend_width">100sp</dimen>
+    <dimen name="discover_songlist_recommend_small_text_height">13sp</dimen>
+    <dimen name="discover_songlist_recommend_big_text_height">25sp</dimen>
+    <dimen name="discover_songlist_recommend_big_text_top">15sp</dimen>
+    <dimen name="discover_songlist_recommend_button_width">80sp</dimen>
+    <dimen name="discover_songlist_recommend_button_height">25sp</dimen>
+    <dimen name="discover_songlist_recommend_button_start">320sp</dimen>
+    <dimen name="discover_songlist_recommend_button_top">15sp</dimen>
+    <dimen name="discover_songlist_recommend_top_height">50sp</dimen>
+    <dimen name="discover_songlist_recommend_bottom_height">150sp</dimen>
+    <dimen name="navigation_head_top_height">180sp</dimen>
+    <dimen name="navigation_head_mid_height">80sp</dimen>
+    <dimen name="navigation_head_portrait_top">20sp</dimen>
+    <dimen name="navigation_head_portrait_start">20sp</dimen>
+    <dimen name="navigation_head_portrait_width">60sp</dimen>
+    <dimen name="navigation_head_nickname_top">30sp</dimen>
+    <dimen name="navigation_head_nickname_start">100sp</dimen>
+    <dimen name="navigation_head_nickname_width">200sp</dimen>
+    <dimen name="navigation_head_nickname_height">40sp</dimen>
+    <dimen name="navigation_head_sign_top">30sp</dimen>
+    <dimen name="navigation_head_sign_start">260sp</dimen>
+    <dimen name="navigation_head_sign_width">60sp</dimen>
+    <dimen name="navigation_head_sign_height">20sp</dimen>
+    <dimen name="navigation_head_bottom_item_size">40sp</dimen>
+    <dimen name="discover_songlist_recommend_height">200sp</dimen>
+    <dimen name="discover_songlist_recommend_bottom_item_width">120sp</dimen>
+    <dimen name="discover_songlist_recommend_bottom_item_img_width">100sp</dimen>
+    <dimen name="discover_songlist_recommend_bottom_item_height">150sp</dimen>
+    <dimen name="discover_songlist_recommend_bottom_item_img_height">140sp</dimen>
+    <dimen name="one">0.01sp</dimen>
+    <dimen name="discover_style_recommend_top">20sp</dimen>
 </resources>
