--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="blue">#3399ff</color>
     <color name="deep_gray">#808080</color>
     <color name="light_gray">#e6e6e6</color>
     <color name="black_background">#fee6e6</color>
